# Neuro-Adaptive-Reasoning-Engine

./: .env.example  .gitignore  .nareignore  CONTRIBUTING.md  Dockerfile  LICENSE  LIMITATIONS.md  NARE.md  README.md  demo_live.py  demo_showcase.py  docker-compose.yml  generate_predictions.py  main.py  pyproject.toml  requirements.txt  scratch_test.py  setup.py
benchmarks/: a_b_benchmark.py  benchmark.py  complex_benchmark.py  fetch_arc.py  fetch_gsm8k.py  fetch_swebench.py  full_benchmark.py  hardcore_benchmark.py  metrics_benchmark.py  nare_arc_full.py  nare_arc_results.json  nare_swe_bench.py  nlp_benchmark.py  quick_test.py  real_swe_bench.py  swe_bench_official.py  swebench_pilot_50.json  swebench_real.json  swebench_test3.json
docs/paper/: main.tex
nare/: .env.example  __init__.py  __main__.py  agent.py  arc_adapter.py  compat.py  config.py  critic.py  graph_memory.py  library_learning.py  llm.py  memory.py  meta_abduction.py  metrics.py  neural_memory.py  oracle.py  query_fingerprint.py  repo_manager.py  rl_retriever.py  sandbox.py  sandbox_subprocess.py  synthesis.py  tau_calibration.py  tmd.txt
nare/agents/: __init__.py  agent_state.py  autonomous.py  autonomous_agent.py  events.py  loop.py  planning.py  repo_map.py  research.py  state.py  triage.py  workflow.py
nare/cli/: __init__.py  __main__.py  app.py  autonomous_mode.py  autonomous_runner.py  autonomy_level.py  autopilot.py  modes.py  (+4 more)
scratch/: test_rule.py
scripts/: demo_blocks.py  list_gemma.py  list_models.py  render_demo_svg.py
tests/: test_oracle.py  test_sandbox.py  test_validate_skill.py
(+139 files in other folders)
