[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nare"
version = "1.0.0"
description = "NARE — Non-parametric Amortized Reasoning Evolution. A Skill-Based Cognitive Architecture for deterministic routing of logic tasks via semantic compression and executable reflexes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nare = "main:main"

[tool.setuptools.packages.find]
include = ["nare*"]
