[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narecli"
version = "0.3.5"
description = "Skill-based reasoning engine with verified synthesis, semantic memory, and library learning."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]

[project.scripts]
nare = "nare.cli.app:main"

[tool.setuptools.packages.find]
include = ["nare*"]
exclude = ["tests*", "benchmarks*", "docs*"]
